# lib/api-spec/openapi.yaml
@@ -122,6 +122,9 @@ components:
           type: string
         username:
           type: string
+        region:
+          type: string
+          nullable: true
         mmr:
           type: integer
         points:
@@ -173,6 +176,9 @@ components:
           type: string
         username:
           type: string
+        region:
+          type: string
+          nullable: true
         totalMMR:
           type: integer
         totalPoints:
@@ -239,6 +245,9 @@ components:
           type: string
         username:
           type: string
+        region:
+          type: string
+          nullable: true
         modes:
           type: object
           additionalProperties:
